# sqlab

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
pub/2024-10. Learning SQL from Within/: README.md  code.ipynb  sqlab_company.sql
pub/2024-10. Learning SQL from Within/output/: same_result_queries_basic.tex
sqlab/: __main__.py  cmd_create.py  cmd_parse.py  cmd_report.py  cmd_shell.py  compose_inserts.py  config.py  database.py  generate_messages.py  message_builder.py  message_formatter.py  nb_tools.py  run_notebook.py  text_tools.py  token_table.py
sqlab/dbms/: __init__.py
sqlab/dbms/mariadb/: database.py  salt.sql  sqlab_ddl.sql  (+1 more)
test/: test_and_snapshot_records.py  test_text_tools.py  test_tsv_row_to_sql_values.py
test/snapshots/: activity_map.gv  complex_graph.json  complex_graph.tsv  complex_graph_tokens.tsv  exercise_1_solution.json  exercise_1_solution.tsv  exercise_n_solutions_same_token.json  exercise_n_solutions_same_token.tsv  exercise_n_solutions_various_tokens.json  exercise_n_solutions_various_tokens.tsv  exercise_n_solutions_with_annotations.json  exercise_n_solutions_with_annotations.tsv  exercise_n_solutions_with_annotations_tokens.tsv  exercise_with_hints.json  exercise_with_hints.tsv  exercise_with_hints_tokens.tsv  exercise_with_useless_next_salt.json  exercise_with_useless_next_salt.tsv  exercise_with_useless_next_salt_tokens.tsv  exercises_with_sectionning_and_eof.json  exercises_with_sectionning_and_eof.tsv  exercises_with_sectionning_and_eof_tokens.tsv  exercises_with_tweak.json  exercises_with_tweak.tsv  exercises_with_tweak_tokens.tsv  graph.gv
(+27 files in other folders)
