[tool.poetry]
name = "sqlab"
version = "0.1.0"
description = "SQL Adventure Builder: a command line tool for creating standalone SQL activities."
authors = ["Aristide Grange"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/laowantong/sqlab/"
keywords = ["education",
            "relational",
            "database",
            "sql",
            "games",
            ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]
packages = [
    { include = "sqlab", from = "." },
]
exclude = ["sqlab/secrets.py"]

[tool.poetry.dependencies]
python = "^3.8.0"
sqlparse = "^0.4.4"
jupysql = "^0.10.10"
mysql-connector-python= "^8.2.0"
sqlalchemy="2.0.27"
psycopg2 = "^2.9.9"
cmd2 = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/laowantong/sqlab/issues"

[tool.poetry.scripts]
sqlab = 'sqlab.__main__:main'
